--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,24 @@
   </head>
 
   <body>
+  	<nav>
+  		<ul>
+  			<li> <%= link_to "Home", root_path %></li>
+  			<% if !user_signed_in? %>
+  			<li> <%= link_to "Sign Up", new_user_registration_path %></li>
+  			<li><%= link_to "Login", new_user_session_path %></li>
+  			
+  			<% end %>
+  			<% if user_signed_in? %>
+  			
+  			<li><%= link_to "Edit Account", edit_user_registration_path %></li>
+
+  			<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+  			<% end %>
+  		</ul>
+  	</nav>
+  	<p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
