--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+
+/*body {
+	background: #A3A3A3;
+}
+
+nav {
+ background-color: #ffffff;
+}
+
+*/
