--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.text_field :containers, id: :job_containers %>
   </div>
 
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.text_field :user_id, id: :job_user_id %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
