--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
   			<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <li><%= link_to "My Boats", boats_path %> </li>
         <li><%= link_to "Create a Boat", new_boat_path %></li>
+        <li><%= link_to "Create a Job", new_job_path %></li>
   			<% end %>
   		</ul>
   	</nav>
