--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,12 @@
 <h2>Hi</h2>
+
+<%= current_user.id %>
+
+<h2>Here's all the jobs you have asigned</h2>
+<%current_user.jobs.each do |job|%>
+  <%= job.description %>
+  
+<% end %>
+
+<br>
+<%= Boat.find(1).name%>
