--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-  	<nav>
+  	<nav class="navbar">
   		<ul>
   			<li> <%= link_to "Home", root_path %></li>
   			<% if !user_signed_in? %>
@@ -22,11 +22,16 @@
   			<li><%= link_to "Edit Account", edit_user_registration_path %></li>
 
   			<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to "My Boats", boats_path %> </li>
+        <li><%= link_to "Create a Boat", new_boat_path %></li>
+        <li><%= link_to "Create a Job", new_job_path %></li>
   			<% end %>
   		</ul>
   	</nav>
-  	<p class="notice"><%= notice %></p>
+  	<p class="notice"><%= @notice %></p>
        <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
+
+
