--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
   			
   			<% end %>
   			<% if user_signed_in? %>
-  			
+  			<li><%= link_to "Create a Job", new_job_path %> </li>
+        <li><%= link_to "All Jobs", jobs_path %></li>
   			<li><%= link_to "Edit Account", edit_user_registration_path %></li>
 
   			<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
