--- a/app/views/boats/_form.html.erb
+++ b/app/views/boats/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name, id: :boat_name %>
+    <%= form.file_field :avatar %>
   </div>
 
   <div class="actions">
