--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,96 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+  font-family:'Open-sans', sans-serif;
+  font-size:17px;
+  line-height:1.5em;
+  margin:0;
+  padding:0;
+}
+
+img{
+  width:100%;
+}
+
+.container{
+  margin:auto;
+}
+
+/* COMMON CLASSES */
+.primary-text{
+  color:#56a79a;
+}
+/* Testing */
+// this is a comment
+
+.primary-background{
+  background:#56a79a;
+  padding: center;
+}
+
+.test-class{
+  color: blue;
+}
+
+/* HEADER */
+#main-header{
+  border-bottom:1px solid #56a79a;
+}
+
+/* NAVBAR */
+#navbar{
+  text-transform:uppercase;
+  text-align:center;
+}
+
+#navbar li{
+  display:inline;
+  padding-right:10px;
+  list-style:none;
+}
+
+#navbar a{
+  text-decoration:none;
+  color:#888;
+}
+
+#navbar li.current a, #navbar a:hover{
+  color:#56a79a;
+  border-bottom: 3px solid #56a79a;
+  padding-bottom:3px;
+}
+
+
+
+/* SHOWCASE */
+#showcase{
+  background: url("cargo-ship.jpg");
+  border-bottom:1px solid #56a79a;
+  margin-bottom:30px;
+}
+
+#showcase .row{
+  height:600px;
+}
+
+#showcase h1{
+  font-size:50px;
+  margin:0;
+  padding-bottom:20px;
+}
+
+#showcase p{
+  color:#ccc;
+  margin:0;
+}
+
+#showcase .showcase-content{
+  background:#333;
+  color:#fff;
+  border-radius:70px;
+  padding:20px;
+  opacity:0.9;
+  text-align:center;
+}
