--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,23 +38,14 @@
         </div>
       </div>
     </header>
-
-    
-
-   <!--  Footer -->
-
-   
-
-
-
-
-
-
-
-
     <p class="notice"><%= @notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+
+    <!-- FOOTER -->
+    <footer id="main-footer">
+            <p>Copyright &copy; 2018 | Shipping Inc</p>
+    </footer>
   </body>
 </html>
 
