--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
 
     <!-- FOOTER -->
     <footer id="main-footer">
-            <p>Copyright &copy; 2018 | Shipping Inc</p>
+            <p>Copyright &copy; 2018 | Shipping</p>
     </footer>
   </body>
 </html>
