--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -5,7 +5,7 @@
   <br>
   <br>
   <div>
-  	<%= image_tag @boat.avatar.url(:thumb) %>
+  	<%= image_tag @boat.avatar.url(:medium) %>
   <br>
   <%@boat.jobs.each do |j|%>
   <strong>Jobs: </strong>
