first commit in like 2 years

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,7 +70,7 @@ img{
 
 /* SHOWCASE */
 #showcase{
-  background: url("cargo.jpeg");
+  background: image-url("cargo.jpeg");
   border-bottom:1px solid #56a79a;
   margin-bottom:30px;
   padding-top: 10px;
